fix tables layout + prevent swipe when tables overflow + reduce pagination height

--- a/public/modules/articles/directives/pw-article-viewedit/assets/scss/_content-marked.scss
+++ b/public/modules/articles/directives/pw-article-viewedit/assets/scss/_content-marked.scss
@@ -103,8 +103,10 @@
 			}
 		}
 		
-		table {
-			overflow: hidden;
+		.table {
+			position: relative;
+			display: inline-block;
+			overflow-x: auto;
 		}
 		
 		/* list padding */
