--- a/public/modules/articles/directives/pw-article-viewedit/assets/scss/_content-pagination.scss
+++ b/public/modules/articles/directives/pw-article-viewedit/assets/scss/_content-pagination.scss
@@ -25,8 +25,8 @@
 			background-color: $body-bg;
 			z-index:100;
 			.pagination { 
-				margin-top: 20px;
-				margin-bottom: 20px;
+				margin-top: 10px;
+				margin-bottom: 10px;
 				.fa { font-size: 10px; }
 			}
 		}
