--- a/public/modules/articles/directives/pw-article-viewedit/assets/scss/_pw-view-edit.scss
+++ b/public/modules/articles/directives/pw-article-viewedit/assets/scss/_pw-view-edit.scss
@@ -1,6 +1,6 @@
 
 pw-article-view-edit {
-	
+
 	/* toc above text */
 	> div.row {
 		position: relative;
@@ -18,6 +18,7 @@ pw-article-view-edit {
 	
 	/* tab - article title */
 	.article-header {
+		overflow: hidden;
 		@include article-headers(2px);
 		
 		color: #fff;
@@ -38,6 +39,7 @@ pw-article-view-edit {
 	
 	/* tab - title */
 	.tab-title {
+		overflow: hidden;
 		@include article-headers(1px);
 		padding: 30px $pw-text-padding 0;
 		margin-bottom: 10px;
@@ -45,6 +47,7 @@ pw-article-view-edit {
 	
 	/* tab - content */
 	.not-codemirror, .CodeMirror-scroll {
+		overflow: hidden;
 		padding: 20px $pw-text-padding;
 		font-family: $pw-font-family;
 		color: $pw-color;
